# VisualStates-examples

./: README.md
PriusData/prius_gazebo/launch/: prius_obstacle_avoid.launch
PriusData/prius_gazebo/worlds/: prius_cone.world
PriusData/prius_gazebo_plugins/: package.xml
bumpAndGo/: README.md
kobuki_bump_and_go/: README.md  kobuki_bump_and_go.xml
kobuki_obstacle_avoidance/: README.md  kobuki_obstacle_avoidance.xml
obstacleAvoidance/: README.md
prius/prius_description/urdf/: prius.urdf
prius/prius_gazebo/launch/: prius.launch  prius_city.launch  prius_crossing.launch  prius_overtake.launch  prius_spawn.launch
prius/prius_gazebo/models/Road_Stop/: model.config  model.sdf
prius/prius_gazebo/models/Road_Stop/meshes/: stop2.dae
prius/prius_gazebo/models/actor/: model.sdf
prius/prius_gazebo/models/stopW/: model.config
prius/prius_gazebo/models/stopW/meshes/: stop2.dae
prius/prius_gazebo/worlds/: prius.world  prius_crossing.world  prius_example.world  prius_overtake.world
prius/prius_gazebo_plugins/: CMakeLists.txt
prius/prius_gazebo_plugins/include/: PriusHybridPlugin.hh
priusObstacleAvoidance/: .README.md.swp  README.md
priusObstacleAvoidance/prius_description/urdf/: prius.urdf
priusObstacleAvoidance/prius_gazebo/: package.xml
priusObstacleAvoidance/prius_gazebo/launch/: prius_obstacle.launch
priusObstacleAvoidance/prius_gazebo/worlds/: prius_obstacle.world
priusObstacleAvoidance/prius_gazebo_plugins/: CMakeLists.txt
priusObstacleAvoidance/prius_obstacle_avoidance/: prius_obstacle_avoidance.xml
priusSpawn/: README.md
priusSpawn/prius_gazebo/: CMakeLists.txt
priusSpawn/prius_gazebo/launch/: prius.launch  prius_world.launch
priusSpawn/prius_gazebo/worlds/: prius.world
priusSpawn/prius_gazebo_plugins/: CMakeLists.txt
priusSpawn/prius_gazebo_plugins/plugins/: gazebo_ros_block_laser.cpp
priusSpawn/prius_spawn/: prius_spawn.xml
prius_crossing/: README.md  prius_crossing.xml
prius_example/: README.md  prius_example.xml
prius_in_city/: README.md  prius_in_city.xml
prius_overtake/: README.md  prius_overtake.xml
prius_overtake/prius_overtake/: CMakeLists.txt  package.xml  prius_overtake.py  prius_overtake.xml
prius_overtake/prius_simulate/: CMakeLists.txt  package.xml  prius_simulate.py
prius_simulate/: prius_simulate.xml
robot_arm/: README.md  robot_arm.xml
