<?xml version="1.0" ?>
<package>
  <name>prius_overtake</name>
  <version>0.0.0</version>
  <description>The prius_overtake package</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO (choose one: BSD, MIT, GPLv2, GPLv3 LGPLv3)</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>visualstates</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>prius_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>visualstates</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>prius_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>python-qt5-bindings</run_depend>
  <export/>
</package>
